testing removing overflow from body to fix scrolling issues

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Adelle Sans' !important;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* width: 100% !important; */
 }
 
